--- a/lab4/app/assets/stylesheets/scaffolds.css.scss
+++ b/lab4/app/assets/stylesheets/scaffolds.css.scss
@@ -18,6 +18,10 @@ th{
   border-color:lightblue;
 }
 
+#butt{
+  width: 700px;
+}
+
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
