--- a/lab4/app/views/students/list.html.erb
+++ b/lab4/app/views/students/list.html.erb
@@ -47,7 +47,20 @@
         <% end %></td>
     <td></td>
   </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td><input id="btnClose" type="button" value="Exit" onClick="custom_close()" /></td>
+    <td><%= link_to 'Print', students_path %></td>
+    <td></br></td>
+    <td></td>
+  </tr>
 </table>
+
 <script language="javascript">
 function custom_close(){
 if 
@@ -60,7 +73,8 @@ else{}
 }
 </script>
 
-<input id="btnClose" type="button" value="Exit" onClick="custom_close()" />
+
+
 
 
 
